# sync-roles

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: deploy-package-to-pypi.yml  test.yaml
requirements/: dev.in  dev.txt  prod.txt
src/sync_roles/: __init__.py  core.py  models.py
src/sync_roles/adapters/: base.py  postgres.py
tests/: __init__.py  conftest.py  test_core.py  test_sync_roles.py
tests/adapters/: test_base.py  test_postgres.py
