[build-system]
requires = ["setuptools>=67", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[project]
requires-python = "~=3.12.0"
dynamic = ["dependencies", "optional-dependencies", "version"]

name = "sync-roles"
description = "Python utility function to ensure that a DB roles have certain permissions."
readme = "README.md"

authors = [
  { name="Department for Business and Trade", email="sre@digital.trade.gov.uk" },
  { name="Roberto Lapuente Romo", email="roberto@lapuente.me" },
]
maintainers = [
  { name="Roberto Lapuente Romo", email="roberto@lapuente.me" },
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/elpinchetopo/sync-roles"

################################################################################

[tool.setuptools]
include-package-data = false

[tool.setuptools.dynamic]
dependencies = { file = ["requirements/prod.txt"] }
optional-dependencies = { dev = { file = ["requirements/dev.txt"] } }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools-git-versioning]
enabled = true
################################################################################

[tool.pytest.ini_options]
log_cli = false
log_level = "DEBUG"

[tool.coverage.run]
source = ["sync_roles"]
omit = ["tests/*"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true

