[build-system]
requires = ["setuptools>=67", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[project]
requires-python = "~=3.12.0"
dynamic = ["dependencies", "optional-dependencies", "version"]

name = "sync-roles"
description = "Python utility function to ensure that a DB roles have certain permissions."
readme = "README.md"

authors = [
  { name="Department for Business and Trade", email="sre@digital.trade.gov.uk" },
  { name="Roberto Lapuente Romo", email="roberto@lapuente.me" },
]
maintainers = [
  { name="Roberto Lapuente Romo", email="roberto@lapuente.me" },
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/elpinchetopo/sync-roles"

################################################################################

[tool.setuptools]
include-package-data = false

[tool.setuptools.dynamic]
dependencies = { file = ["requirements/prod.txt"] }
optional-dependencies = { dev = { file = ["requirements/dev.txt"] } }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools-git-versioning]
enabled = true

################################################################################

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "A",
    # "ANN",  Add once we have type annotations
    "B",
    "C4",
    # "C90",  Add after simplifying complex expressions
    "COM",
    "D",
    # "DOC",  # Currently in preview status
    "E",
    "ERA",
    "EXE",
    "F",
    "FA",
    "FURB",
    "I",
    "ICN",
    "INP",
    "ISC",
    "LOG",
    "N",
    "PIE",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "T10",
    "T20",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "S608"  # No sql injection possible in our use case
]


[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/test_sync_roles.py" = [
    "ANN",  # We don't have type annotations in tests
    "D",  # We don't require docstrings in tests
    "S101",  # We allow assert statements in tests
    "S106",  # We allow hardcoding passwords in tests
]

################################################################################

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
packages = ["sync_roles"]


################################################################################

[tool.pytest.ini_options]
log_cli = false
log_level = "DEBUG"

[tool.coverage.run]
source = ["sync_roles"]
omit = ["tests/*"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true

